# create-argparse-project

./: .travis.yml  entry_points.cfg  setup.cfg
createargparseproject/: cli.py
createargparseproject_template/: README.md  entry_points.cfg  setup.cfg
