[metadata]
name = PROJECT_NAME
version = attr: PACKAGE_NAME.__version__
url = REPOSITORY_URL
author = AUTHOR_NAME
author_email = AUTHOR_EMAIL
license = MIT
description = DESCRIPTION
long_description = file: README.md

[options]
packages = find:
entry_points = file: entry_points.cfg
install_requires =